--- a/index.html
+++ b/index.html
@@ -7,28 +7,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="./css/main.css" />
-  <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 </head>
 
 <body>
   <main>
-      <div class="hero">
-        <div class="hero_bloc">
-          <h1>Поставщик Дальнего Востока</h1>
-          <p class="hero_text_one">
-            Наши клиенты получают полный спектр услуг по работе с Китаем.
-            Начиная с подбора производителя заканчивая доставкой товара до
-            двери. Настолько прозрачных сделок с Китаем вы еще не осуществляли.
-          </p>
-          <p class="hero_text_two">Узнать больше</p>
-          <div class="hero_line"></div>
-        </div>
-        <div class="hero_fon">
-          <img class="hero_img" src="./images/car(1).png" alt="car" />
-        </div>
+    <div class="hero">
+      <div class="hero_bloc">
+        <h1>Поставщик Дальнего Востока</h1>
+        <p class="hero_text_one">
+          Наши клиенты получают полный спектр услуг по работе с Китаем.
+          Начиная с подбора производителя заканчивая доставкой товара до
+          двери. Настолько прозрачных сделок с Китаем вы еще не осуществляли.
+        </p>
+        <p class="hero_text_two">Узнать больше</p>
+        <div class="hero_line"></div>
       </div>
-   
-  
+      <div class="hero_fon">
+        <img class="hero_img" src="./images/car(1).png" alt="car">
+        <!-- <img class="./" src="./images/hero_img_media.png" alt=""> -->
+      </div>
+    </div>
+
+
     <div class="card">
       <div class="card_bloc">
         <img src="./images/icon.svg" alt="icon" width="92" height="92" />
@@ -55,9 +55,9 @@
         </p>
       </div>
     </div>
-  
 
-    
+
+
     <div class="checkbox">
       <h2 class="checkbox_main_title">В какой сфере вы работаете?</h2>
       <p class="checkbox_main_text">
@@ -65,11 +65,11 @@
         информацию <br />
         соответствующую сфере Вашей деятельности.
       </p>
-  
+
       <div class="checkbox_main">
         <div class="checkbox_main_one">
           <div class="checkbox_container">
-            <form action="">
+            <form action="text">
               <label class="chackbox_label">
                 <input type="radio" name="box" />
                 <span class="icon"></span>
@@ -84,9 +84,9 @@
               </label>
             </form>
           </div>
-  
+
           <div class="checkbox_container">
-            <form action="">
+            <form action="text">
               <label class="chackbox_label">
                 <input type="radio" name="box" />
                 <span class="icon"></span>
@@ -101,14 +101,14 @@
               </label>
             </form>
           </div>
-  
+
           <div class="checkbox_container">
-            <form action="">
+            <form action="text">
               <label class="chackbox_label">
                 <input type="radio" name="box" />
                 <span class="icon"></span>
                 <div class="checkbox_card">
-                  <h2 class="checkbox_title">Я работаю на произвостве</h2>
+                  <h3 class="checkbox_title">Я работаю на произвостве</h3>
                   <p class="checkbox_text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                     do <br />eiusmod tempor incididunt ut labore et dolore magna
@@ -126,11 +126,11 @@
         </div>
       </div>
     </div>
-  
+
     <div class="car_image">
       <img class="car_img" src="./images/car(2).png" alt="image_car" />
     </div>
-  
+
     <div class="tabs">
       <div class="tabs_item">
         <div class="tabs_img">
@@ -144,7 +144,7 @@
           </p>
         </div>
       </div>
-  
+
       <div class="tabs_item">
         <div class="tabs_img">
           <img src="./images/icon(4).svg" alt="icon(4)" />
@@ -157,7 +157,7 @@
           </p>
         </div>
       </div>
-  
+
       <div class="tabs_item">
         <div class="tabs_img">
           <img src="./images/icon(5).svg" alt="icon(5)" />
@@ -170,7 +170,7 @@
           </p>
         </div>
       </div>
-  
+
       <div class="tabs_item">
         <div class="tabs_img">
           <img src="./images/icon(6).svg" alt="icon(6)" />
@@ -184,14 +184,14 @@
         </div>
       </div>
     </div>
-  
+
     <div class="container">
       <h2 class="container_two">Выполненные работы</h2>
       <p class="container_three">
         Мы собрали информацию по грузам, которые мы уже доставили. <br> У нас
         специальный подход к каждому виду товаров.
       </p>
-  
+
       <div class="box_one">
         <div class="site_main">
           <img class="rangtangle_one" src="./images/Rectangle13.png" alt="rangtangle" />
@@ -224,7 +224,7 @@
           <div class="hr_one"></div>
         </div>
       </div>
-  
+
       <div class="room">
         <div class="room_text">
           <h2>Привлеченные клиенты</h2>
@@ -232,7 +232,7 @@
         <div><img class="room_img" src="./images/paper(1).png" alt=""></div>
       </div>
     </div>
-  
+
     <div class="bloc">
       <h2 class="container_two bloc_four">Этапы поставки</h2>
       <div class="bloc_card">
@@ -292,7 +292,7 @@
         </div>
       </div>
     </div>
-  
+
     <div class="logosite_main">
       <div>
         <h2 class="container_two bloc_four logosite_main_one">Нам доверяют</h2>
@@ -303,43 +303,43 @@
           <h3 class="logosite_title">Росатом</h3>
           <p class="logosite_text">Корпорация атомной энергии</p>
         </div>
-  
+
         <div class="logosite_one">
           <img src="./images/img_two.svg" alt="img_two" width="150" height="101" />
           <h3 class="logosite_title">Газпром</h3>
           <p class="logosite_text">Энергетическая компания</p>
         </div>
-  
+
         <div class="logosite_one">
           <img src="./images/img_three.svg" alt="img_three" width="125" height="101" />
           <h3 class="logosite_title">Роснефть</h3>
           <p class="logosite_text">Нефтегазовая компания</p>
         </div>
-  
+
         <div class="logosite_one">
           <img src="./images/img_four.svg" alt="img_one" width="77" height="101" />
           <h3 class="logosite_title">Роскосмос</h3>
           <p class="logosite_text">Корпорация в космической отрасли</p>
         </div>
-  
+
         <div class="logosite_one">
           <img src="./images/img_five.svg" alt="img_one" width="182" height="101" />
           <h3 class="logosite_title">Лукойл</h3>
           <p class="logosite_text">Нефтяная компания</p>
         </div>
-  
+
         <div class="logosite_one">
           <img src="./images/img_six.svg" alt="img_one" width="95" height="101" />
           <h3 class="logosite_title">Интер РАО</h3>
           <p class="logosite_text">Энергетическая компания</p>
         </div>
-  
+
         <div class="logosite_one">
           <img src="./images/img_siven.svg" alt="img_one" width="79" height="101" />
           <h3 class="logosite_title">Ростех</h3>
           <p class="logosite_text">Промышленная корпорация</p>
         </div>
-  
+
         <div class="logosite_one">
           <img src="./images/img_eight.svg" alt="img_one" width="145" height="101" />
           <h3 class="logosite_title">Банк ВТБ</h3>
@@ -347,14 +347,14 @@
         </div>
       </div>
     </div>
-  
+
     <div class="team">
       <div>
         <h2 class="container_two bloc_four logosite_main_one team_title">
           Сотрудники компании
         </h2>
       </div>
-  
+
       <div class="team_card">
         <div class="team_card_one">
           <div class="team_bloc_one"></div>
@@ -366,12 +366,13 @@
               <div class="team_link"></div>
               <a href="https://www.instagram.com
               "><img class="team_img" src="./images/instagram.svg" alt="instagram"></a>
-              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
+              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img
+                  class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
               <a href="https://ru.linkedin.com/"><img class="team_img" src="./images/linkedin.svg" alt="linkedin"></a>
             </div>
           </div>
         </div>
-  
+
         <div class="team_card_one">
           <div class="team_bloc_one"></div>
           <div class="team_bloc_two">
@@ -382,7 +383,8 @@
               <div class="team_link"></div>
               <a href="https://www.instagram.com
             "><img class="team_img" src="./images/instagram.svg" alt="instagram"></a>
-              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
+              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img
+                  class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
               <a href="https://ru.linkedin.com/"><img class="team_img" src="./images/linkedin.svg" alt="linkedin"></a>
             </div>
           </div>
@@ -397,7 +399,8 @@
               <div class="team_link"></div>
               <a href="https://www.instagram.com
             "><img class="team_img" src="./images/instagram.svg" alt="instagram"></a>
-              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
+              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img
+                  class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
               <a href="https://ru.linkedin.com/"><img class="team_img" src="./images/linkedin.svg" alt="linkedin"></a>
             </div>
           </div>
@@ -412,7 +415,8 @@
               <div class="team_link"></div>
               <a href="https://www.instagram.com
             "><img class="team_img" src="./images/instagram.svg" alt="instagram"></a>
-              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
+              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img
+                  class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
               <a href="https://ru.linkedin.com/"><img class="team_img" src="./images/linkedin.svg" alt="linkedin"></a>
             </div>
           </div>
@@ -427,7 +431,8 @@
               <div class="team_link"></div>
               <a href="https://www.instagram.com
             "><img class="team_img" src="./images/instagram.svg" alt="instagram"></a>
-              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
+              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img
+                  class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
               <a href="https://ru.linkedin.com/"><img class="team_img" src="./images/linkedin.svg" alt="linkedin"></a>
             </div>
           </div>
@@ -442,20 +447,102 @@
               <div class="team_link"></div>
               <a href="https://www.instagram.com
             "><img class="team_img" src="./images/instagram.svg" alt="instagram"></a>
-              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
+              <a href="https://play.google.com/store/apps/details?id=com.nekki.vector&hl=en_US&gl=US"><img
+                  class="team_img" src="./images/Vector(4).svg" alt="Vector"></a>
               <a href="https://ru.linkedin.com/"><img class="team_img" src="./images/linkedin.svg" alt="linkedin"></a>
             </div>
           </div>
         </div>
       </div>
     </div>
-  
+    <section>
+      <div class="box_two">
+        <div>
+          <div class="box">
+            <div>
+              <img class="box_title" src="./images/iphone2.svg" alt="iphone">
+            </div>
+            <div>
+              <p class="telefon">Телефон</p>
+              <span class="span_box">+7 8422 99 666 5</span>
+            </div>
+          </div>
+          <div class="box-1">
+            <div>
+              <img class="box_title" src="./images/post_img.svg" alt="iphone">
+            </div>
+            <div>
+              <p class="telefon">E-mail</p>
+              <span class="span_box">info@pdv.ooo</span>
+            </div>
+          </div>
+          <div class="box-1">
+            <div>
+              <img class="box_title" src="./images/mobile_fon.svg" alt="iphone">
+            </div>
+            <div>
+              <p class="telefon">Whatsapp</p>
+              <span class="span_box">+86 158 666 95 616
+              </span>
+            </div>
+          </div>
+          <div class="box-1">
+            <div>
+              <img class="box_title" src="./images/S_img.svg" alt="iphone">
+            </div>
+            <div>
+              <p class="telefon">Skype</p>
+              <span class="span_box">sxy-bolts.cn</span>
+            </div>
+          </div>
+        </div>
+
+
+        <div>
+          <table>
+            <tr>
+              <th>Полное наименование:</th>
+              <td>ООО "Поставщик Дальнего Востока"</td>
+            </tr>
+            <tr>
+              <th>ИНН:</th>
+              <td>7329023100</td>
+            </tr>
+
+            <tr>
+              <th>КПП:</th>
+              <td>732901001</td>
+            </tr>
+            <tr>
+              <th>ОГРН:</th>
+              <td>1167325074762</td>
+            </tr>
+            <tr>
+              <th>Адрес:</th>
+              <td>Россия, Ульяновская обл, территория Портовой Особой Экономической Зоны, проезд Первых Резидентов дом 3
+              </td>
+            </tr>
+
+          </table>
+        </div>
+      </div>
+    </section>
+
+
+
+
+
     <div class="video">
       <h2 class="container_two">Видео о нашей работе</h2>
       <p class="container_three">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. <br> Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa tincidunt. Venenatis urna cursus eget nunc <br> scelerisque viverra mauris in. Pharetra convallis posuere morbi leo urna. Eget sit amet tellus cras adipiscing. 
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna aliqua. <br> Elit duis tristique sollicitudin nibh sit amet. Ultrices eros in cursus turpis massa
+        tincidunt. Venenatis urna cursus eget nunc <br> scelerisque viverra mauris in. Pharetra convallis posuere morbi
+        leo urna. Eget sit amet tellus cras adipiscing.
       </p>
-      <video  class="video_main"  src="https://player.vimeo.com/external/463002368.sd.mp4?s=6b9745c7632ff487acd0845a10ebabc45a1e495d&profile_id=164&oauth2_token_id=57447761" autoplay loop muted></video>
+      <video class="video_main"
+        src="https://player.vimeo.com/external/463002368.sd.mp4?s=6b9745c7632ff487acd0845a10ebabc45a1e495d&profile_id=164&oauth2_token_id=57447761"
+        autoplay loop muted></video>
     </div>
   </main>
 </body>
